src/objects/Contact_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Pre_Op_Imaging__c</fullName>
        <label>Pre-Op Imaging</label>
        <picklist>
            <picklistValues>
                <fullName>MRI pre-surgery, CT day of surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI day of surgery, no CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT day of surgery, no MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI and CT day of surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI and CT pre-surgery (for FHC or any bone fiducial workflow)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Target_S__c</fullName>
        <label>Preferred Target(s)</label>
        <picklist>
            <picklistValues>
                <fullName>STN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pressurewire_Profile__c</fullName>
        <label>SJM PressureWire Usage</label>
        <picklist>
            <picklistValues>
                <fullName>High - 6+ per month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium -  3-5 per month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low - 1-2 per month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pressurewire_SJM_market_share__c</fullName>
        <label>Pressurewire SJM market share %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pressurewire_Total_Cases_Per_Annum__c</fullName>
        <label>Pressurewire - Total Cases Per Annum</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renal_Denervation_Company__c</fullName>
        <inlineHelpText>Please specify the company used for this.</inlineHelpText>
        <label>Renal Denervation - Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renal_Denervation_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renal Denervation - Interested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renal_Denervation_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renal Denervation - Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepairMinimallyInvasive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repair - Minimally Invasive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepairNoProceduresPA__c</fullName>
        <label>Repair -No. Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Mitral_Preference__c</fullName>
        <label>Repair - Mitral Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Rigid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Rigid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Robotic_Repair_Procedures_Mitral__c</fullName>
        <label>Robotic Repair Procedures Mitral %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJMLastName__c</fullName>
        <description>Contact lookup field</description>
        <inlineHelpText>This is the information i need....</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SJM_Annual_New__c</fullName>
        <label>Annual New Patient Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SJM_MER_System__c</fullName>
        <label>MER System</label>
        <picklist>
            <picklistValues>
                <fullName>FHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO NeuroOmega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Microguide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO NeuroNav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHC Guideline 4000 LP+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHC Guideline 4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT Leadpoint 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT Leadpoint Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axon Guideline 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inomed ISIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_MHV_Brand_Preference_Mitral__c</fullName>
        <label>SJM MHV Brand Preference % Mitral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_MHV_Preference_Aortic__c</fullName>
        <label>SJM MHV Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Micrdrive__c</fullName>
        <label>Microdrive</label>
        <picklist>
            <picklistValues>
                <fullName>FHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO NeuroNav Headstage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO NeuroOmega Headstage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO NeuroDrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHC STar Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHC microTargeting Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elekta MicroDrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Navigation_System__c</fullName>
        <label>Navigation System</label>
        <picklist>
            <picklistValues>
                <fullName>Medtronic Stealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brainlab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHC Waypoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integra StereoCalc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazor Renaissance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosa Robot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearpoint Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renishaw Robot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPlan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Percent_Conventional__c</fullName>
        <label>Percent Conventional</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Preferred_Device_Type__c</fullName>
        <label>Preferred Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two IPGs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity 5 IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity 7 IPG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Preferred_Frame__c</fullName>
        <label>Preferred Frame</label>
        <picklist>
            <picklistValues>
                <fullName>Leksell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starfix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexframe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROSA Robot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazor Renaissance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renishaw Robot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Repair_Mitral_Brand_Preference__c</fullName>
        <label>SJM Repair Mitral Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Repair_Tricuspid_Brand_Preference__c</fullName>
        <label>SJM Repair Tricuspid Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Secondary_Frame__c</fullName>
        <label>Secondary Frame</label>
        <picklist>
            <picklistValues>
                <fullName>Leksell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starfix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexframe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROSA Robot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazor Renaissance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renishaw Robot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Parkinson&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essential Tremor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dystonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_Surgical_Staging__c</fullName>
        <label>Surgical Staging</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_TAVI_Brand_Preference__c</fullName>
        <label>SJM TAVI Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_THV_Brand_Preference_Aortic__c</fullName>
        <label>SJM THV Brand Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_THV_Brand_Preference_Mitral__c</fullName>
        <label>SJM THV Brand Preference % Mitral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_VCD_Market_Share_Percentage__c</fullName>
        <label>SJM VCD Market Share (Percentage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STN_Lead_Preference__c</fullName>
        <label>STN Lead Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Infinity Directional Lead #6172 (7.5mm contact span)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity Directional Lead #6173 (10.5mm contact span)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STS_Plus_Certification_Date__c</fullName>
        <label>STS Plus Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scrubs_Access__c</fullName>
        <label>Scrubs Access</label>
        <picklist>
            <picklistValues>
                <fullName>Available in locker room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Must sign out from onsite representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScrubEx machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repscrubs vending machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can wear own into OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sorin_MHV_Brand_Preference_Aortic__c</fullName>
        <label>Sorin MHV Brand Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sorin_MHV_Preference_Mitral__c</fullName>
        <label>Sorin MHV Preference % Mitral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sorin_Mitral_Repair_Brand_Preference__c</fullName>
        <label>Sorin Mitral Repair Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sorin_Repair_Mitral_Brand_Preference__c</fullName>
        <label>Sorin Repair Mitral Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sorin_TAVI_Brand_Preference__c</fullName>
        <label>Sorin TAVI Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sorin_THV_Brand_Preference_Aortic__c</fullName>
        <label>Sorin THV Brand Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sternotomy_Repair_Procedures_Mitral__c</fullName>
        <label>Sternotomy Repair Procedures Mitral %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sutureless_Brands_Used__c</fullName>
        <label>Sutureless Brands Used</label>
        <picklist>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TAVICurrentlyInvolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TAVI - Currently Involved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAVI_Brand_Loyalty__c</fullName>
        <label>TAVI - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TAVI_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TAVI - Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAVI_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TAVI - Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAVI_Involvement_Procedures_PA__c</fullName>
        <label>TAVI Involvement Procedures PA</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>THVAorticBrandLoyalty__c</fullName>
        <label>THV - Aortic - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>SJM- TF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM - Epic Supra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM- Epic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDW- Perimount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDW- Magna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT- Mosaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin- Mitroflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>THVAorticProceduresPA__c</fullName>
        <label>THV - Aortic # Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>THVMitralBrandLoyalty__c</fullName>
        <label>THV - Mitral - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwards</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>THVMitralProceduresPA__c</fullName>
        <label>THV - Mitral # Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>THV_Aortic_Minimally_Invasive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>THV - Aortic Minimally Invasive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thoracotomy_Repair_Procedures_Mitral__c</fullName>
        <label>Thoracotomy Repair Procedures Mitral %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_size_of_VCD_Opportunity__c</fullName>
        <inlineHelpText>Enter the total number of procedures performed annually where a VCD could be used.</inlineHelpText>
        <label>Total size of VCD Opportunity (annually)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tricuspid_Repairs_Brand_Loyalty__c</fullName>
        <label>Tricuspid Repairs Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitraflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tricuspid_Repairs_Procedures_PA__c</fullName>
        <label>Tricuspid Repairs Procedures PA</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>MHV Aortic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MHV Mitral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitral Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sutureless Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAVI Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THV Aortic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THV Mitral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tricuspid Repairs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VCD_Of_Choice__c</fullName>
        <label>VCD Of Choice</label>
        <picklist>
            <picklistValues>
                <fullName>Angioseal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femoseal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mynx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exoseal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starclose</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIP_Certification_Date__c</fullName>
        <label>VIP Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VSDNoProceduresPA__c</fullName>
        <label>VSD  - No. Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSDSJMBrandLoyalty__c</fullName>
        <label>VSD  - SJM Brand Loyalty %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VTAblationBrandLoyalty__c</fullName>
        <label>VT Ablation - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>BTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VTAblationNoProcsPA__c</fullName>
        <label>VT Ablation - No. Procs PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VTAblation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VT Ablation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vim_Lead_Preference__c</fullName>
        <label>Vim Lead Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Infinity Directional Lead #6172 (7.5mm contact span)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity Directional Lead #6173 (10.5mm contact span)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Why_Doesn_t_Dr_use_a_VCD__c</fullName>
        <label>Why Doesn&apos;t Dr use a VCD</label>
        <picklist>
            <picklistValues>
                <fullName>Bad experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease in Artery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not comfortable with device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puncture Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radial Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sees no benefit compared to Manual Compression</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Profile</label>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Profile</pluralLabel>
    <recordTypes>
        <fullName>AF_Contact_Profile</fullName>
        <active>true</active>
        <label>AF Contact Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>ANS_Contact_Profile</fullName>
        <active>true</active>
        <label>ANS Contact Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Angio_Contact_Profile</fullName>
        <active>true</active>
        <label>Angio Contact Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Contact_Profile</fullName>
        <active>true</active>
        <label>CRM Contact Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cardiac_Surgery_Profile</fullName>
        <active>true</active>
        <label>Cardiac Surgery Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>DBS_Contact_Profile</fullName>
        <active>true</active>
        <description>Procedure types for DBS</description>
        <label>DBS Contact Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>SI_Contact_Profile</fullName>
        <active>true</active>
        <label>SI Contact Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vascular_Contact_Profile</fullName>
        <active>true</active>
        <label>Vascular Contact Profile</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>